recursion.cons.concat.Concat.scala.error
Erreur de compilation :
Concat:3: error: not found: value l
  if(l1.tail==Nil)return l.head::l2
                         ^Concat:4: error: not found: value l
  else return l.head::concat(l1.tail, l2)
              ^